// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea Component matches snapshot for default variant 1`] = `
<div
  class="sc-fhHczv eLkUHf"
>
  <div
    class="sc-ggWZvA evJOyk"
  >
    <textarea
      class="sc-bRKDuR cwpftx"
      data-testid="text-area"
      placeholder="Enter text here"
    >
      snapshot default
    </textarea>
  </div>
</div>
`;

exports[`TextArea Component matches snapshot for report variant 1`] = `
<div
  class="sc-fhHczv eLkUHf"
>
  <div
    class="sc-ggWZvA evJOyk"
  >
    <textarea
      class="sc-hvigdm hDkxpu"
      data-testid="text-area"
      placeholder="Report here"
    >
      snapshot report
    </textarea>
  </div>
</div>
`;
